; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/libz/extr_gzlib.c_gzdopen.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/libz/extr_gzlib.c_gzdopen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"<fd:%d>\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @gzdopen(i32 %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = icmp eq i32 %8, -1
  br i1 %9, label %14, label %10

10:                                               ; preds = %2
  %11 = call i64 @malloc(i32 19)
  %12 = inttoptr i64 %11 to i8*
  store i8* %12, i8** %6, align 8
  %13 = icmp eq i8* %12, null
  br i1 %13, label %14, label %15

14:                                               ; preds = %10, %2
  store i32* null, i32** %3, align 8
  br label %26

15:                                               ; preds = %10
  %16 = load i8*, i8** %6, align 8
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @snprintf(i8* %16, i32 19, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 %17)
  %19 = load i8*, i8** %6, align 8
  %20 = load i32, i32* %4, align 4
  %21 = load i8*, i8** %5, align 8
  %22 = call i32* @gz_open(i8* %19, i32 %20, i8* %21)
  store i32* %22, i32** %7, align 8
  %23 = load i8*, i8** %6, align 8
  %24 = call i32 @free(i8* %23)
  %25 = load i32*, i32** %7, align 8
  store i32* %25, i32** %3, align 8
  br label %26

26:                                               ; preds = %15, %14
  %27 = load i32*, i32** %3, align 8
  ret i32* %27
}

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #1

declare dso_local i32* @gz_open(i8*, i32, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
